Accessible model selection UI and multi-run project summary for comparator

--- a/comparator.html
+++ b/comparator.html
@@ -52,6 +52,23 @@
         </div>
     </div>
 
+    <div style="margin-bottom: 10px; display: flex; gap: 20px; align-items: center;">
+        <div>
+            <label for="project-select">Project: </label>
+            <select id="project-select" onchange="onProjectChange()"></select>
+        </div>
+        <div id="model-select-container" style="display:none; position:relative;">
+            <span id="model-select-summary" style="margin-right: 10px;">Select models</span>
+            <button id="model-select-modify" onclick="openModelDropdown(event)" aria-haspopup="dialog" aria-controls="model-select-list">Modify</button>
+            <div id="model-select-dialog" style="display:none; position:absolute; z-index:10; background:white; border:1px solid #ccc; border-radius:4px; margin-top:4px; min-width:220px; max-width:320px; max-height:220px; overflow:auto; box-shadow:0 2px 8px #0002;">
+                <div style="padding:8px 12px; font-weight:bold;">Select models to compare</div>
+                <ul id="model-select-list" role="listbox" aria-multiselectable="true" tabindex="-1" style="margin:0; padding:4px 0; list-style:none;"></ul>
+                <div style="padding:8px 12px; text-align:right;">
+                    <button onclick="closeModelDropdown()">Done</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="grid-container" id="main-grid">
         <div class="panel context-panel">
             <div class="panel-header">Context & Inputs</div>
@@ -65,28 +82,175 @@
         </div>
 
     <script>
+
+        let allData = [];
         let data = [];
         let index = 0;
         let results = {}; // { id: { choice: 'model_filename', comment: '' } }
+        let projects = [];
+        let selectedProject = null;
+        let allModels = [];
+        let selectedModels = [];
+        let modelDropdownOpen = false;
 
         async function init() {
             try {
-                const res = await fetch('/data/comparison');
-                data = await res.json();
-                if(data.length > 0) {
-                    generateLayout(data[0].models);
-                    render();
-                } else {
-                    alert("No data loaded.");
+                // Load projects with multiple runs
+                const projRes = await fetch('/results/projects_with_multiple_runs.json');
+                projects = Object.keys(await projRes.json());
+                const select = document.getElementById('project-select');
+                select.innerHTML = '';
+                if (projects.length === 0) {
+                    select.innerHTML = '<option>No projects with multiple runs</option>';
+                    document.getElementById('main-grid').style.display = 'none';
+                    document.getElementById('progress').textContent = 'No projects to compare';
+                    return;
                 }
+                projects.forEach(p => {
+                    const opt = document.createElement('option');
+                    opt.value = p;
+                    opt.textContent = p;
+                    select.appendChild(opt);
+                });
+                selectedProject = projects[0];
+                // Load all comparison data
+                const res = await fetch('/results/comparison.json');
+                allData = await res.json();
+                filterDataByProject();
             } catch (e) { console.error(e); }
         }
+
+        function onProjectChange() {
+            const select = document.getElementById('project-select');
+            selectedProject = select.value;
+            filterDataByProject();
+        }
+
+        function openModelDropdown(e) {
+            e.preventDefault();
+            modelDropdownOpen = true;
+            // Update checkboxes to reflect current selectedModels
+            const modelSelectList = document.getElementById('model-select-list');
+            Array.from(modelSelectList.querySelectorAll('input[type=checkbox]')).forEach(cb => {
+                cb.checked = selectedModels.includes(cb.value);
+            });
+            document.getElementById('model-select-dialog').style.display = '';
+            modelSelectList.focus();
+        }
+
+        function closeModelDropdown() {
+            modelDropdownOpen = false;
+            document.getElementById('model-select-dialog').style.display = 'none';
+            document.getElementById('model-select-modify').focus();
+        }
+
+        function onModelCheckboxChange() {
+            const checkboxes = document.querySelectorAll('#model-select-list input[type=checkbox]');
+            selectedModels = Array.from(checkboxes).filter(cb => cb.checked).map(cb => cb.value);
+            updateModelSummary();
+            filterDataByProject(false);
+        }
+
+        function updateModelSummary() {
+            const summary = document.getElementById('model-select-summary');
+            summary.textContent = `${selectedModels.length}/${allModels.length} scans enabled`;
+        }
+
+        // Keyboard navigation for accessibility
+        document.addEventListener('keydown', function(e) {
+            if (!modelDropdownOpen) return;
+            if (e.key === 'Escape') {
+                closeModelDropdown();
+            } else if (e.key === 'Tab') {
+                // Trap focus inside dialog
+                const dialog = document.getElementById('model-select-dialog');
+                const focusable = dialog.querySelectorAll('button, [tabindex]:not([tabindex="-1"])');
+                const first = focusable[0];
+                const last = focusable[focusable.length-1];
+                if (e.shiftKey ? document.activeElement === first : document.activeElement === last) {
+                    e.preventDefault();
+                    (e.shiftKey ? last : first).focus();
+                }
+            }
+        });
+
+        function filterDataByProject(resetModels = true) {
+            // Get all models for this project
+            const projectItems = allData.filter(item => item.models.some(m => m.model_name.startsWith(selectedProject + '-')));
+            // Collect all unique model names for this project
+            let modelSet = new Set();
+            projectItems.forEach(item => {
+                item.models.forEach(m => {
+                    if (m.model_name.startsWith(selectedProject + '-')) modelSet.add(m.model_name);
+                });
+            });
+            allModels = Array.from(modelSet);
+            // If more than 2 models, show accessible summary and modify button
+            const modelSelectDiv = document.getElementById('model-select-container');
+            const modelSelectList = document.getElementById('model-select-list');
+            if (allModels.length > 2) {
+                modelSelectDiv.style.display = '';
+                modelSelectList.innerHTML = '';
+                allModels.forEach((m, idx) => {
+                    const li = document.createElement('li');
+                    li.setAttribute('role', 'option');
+                    li.setAttribute('aria-selected', selectedModels.includes(m) ? 'true' : 'false');
+                    li.style.display = 'flex';
+                    li.style.alignItems = 'center';
+                    const cb = document.createElement('input');
+                    cb.type = 'checkbox';
+                    cb.value = m;
+                    cb.id = 'model-cb-' + idx;
+                    cb.checked = selectedModels.includes(m);
+                    cb.setAttribute('aria-label', m);
+                    cb.onchange = onModelCheckboxChange;
+                    li.appendChild(cb);
+                    const lbl = document.createElement('label');
+                    lbl.htmlFor = cb.id;
+                    lbl.textContent = m;
+                    lbl.style.marginLeft = '8px';
+                    li.appendChild(lbl);
+                    modelSelectList.appendChild(li);
+                });
+                // Select first 3-4 models by default or keep previous selection
+                if (resetModels || selectedModels.length === 0) {
+                    selectedModels = allModels.slice(0, Math.min(4, allModels.length));
+                }
+                updateModelSummary();
+            } else {
+                modelSelectDiv.style.display = 'none';
+                selectedModels = allModels;
+            }
+            // Filter data to only include selected models
+            data = projectItems.map(item => {
+                // Only keep selected models for this item
+                return {
+                    ...item,
+                    models: item.models.filter(m => selectedModels.includes(m.model_name))
+                };
+            }).filter(item => item.models.length > 0);
+            index = 0;
+            if (data.length > 0) {
+                generateLayout(data[0].models);
+                render();
+            } else {
+                document.getElementById('main-grid').style.display = 'none';
+                document.getElementById('progress').textContent = 'No data for selected project/models';
+            }
+        }
+
+        // Close dropdown if clicking outside
+        document.addEventListener('mousedown', function(e) {
+            const dialog = document.getElementById('model-select-dialog');
+            if (modelDropdownOpen && dialog && !dialog.contains(e.target) && e.target.id !== 'model-select-modify') {
+                closeModelDropdown();
+            }
+        });
 
         function generateLayout(models) {
             const grid = document.getElementById('main-grid');
             // Keep context panel, remove old model panels if any
             while (grid.children.length > 1) { grid.removeChild(grid.lastChild); }
-
             models.forEach((model, i) => {
                 const div = document.createElement('div');
                 div.className = `panel model-${i}-header`;
