--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
             --bg-color: #f8fafc;
             --card-bg: #ffffff;
             --border-color: #e2e8f0;
+            --font-heading: "Helvetica Neue", Helvetica, Arial, sans-serif;
+            --font-body: "Times New Roman", Times, serif;
         }
 
         body {
-            font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+            font-family: var(--font-body);
             margin: 0;
             padding: 0;
             background-color: var(--bg-color);
@@ -21,6 +23,10 @@
             height: 100vh;
             display: flex;
             flex-direction: column;
+        }
+
+        h1, h2, h3, h4, h5, h6 {
+            font-family: var(--font-heading);
         }
 
         /* --- Header --- */
@@ -181,7 +187,7 @@
             padding: 15px;
             border-radius: 6px;
             border: 1px solid #e2e8f0;
-            font-family: 'Segoe UI', sans-serif;
+            font-family: var(--font-body);
             line-height: 1.6;
             white-space: pre-wrap;
             font-size: 0.95rem;
